## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am 2846 2009-07-18 14:18:51Z chrfranke $
#

examplesdir=$(exampledir)

examples_DATA = README

examples_SCRIPTS = Example1     \
                   Example2     \
                   Example3     \
                   Example4

EXTRA_DIST = $(examples_SCRIPTS)

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
